# e-commerce_MVP

./: .env.sample  .gitignore  README.md  pyproject.toml
app/: factory.py  main.py
app/cart/: models.py  schemas.py  services.py  views.py
app/core/: config.py
app/products/: models.py  schemas.py  services.py  view.py
app/tests/: conftest.py  test_services.py
app/users/: auth.py  models.py  schemas.py  services.py  views.py
migrations/models/: 0_20231108200531_init.py  1_20231111164925_update.py
